--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -98,11 +98,11 @@ Main page styles
 }
 
 .hipster {
-    display: inline-block;
-    width: 347px;
-    height: 497px;
-    background: url("../images/hipster.png") no-repeat center top;
+    width: 600px;
+    height: 300px;
+    background: url(../images/GetReviews.png) no-repeat center top;
     background-size: contain;
+    margin: auto;
 }
 
 /* wait autoprefixer update to allow simple generation of high pixel density media query */
@@ -114,7 +114,7 @@ only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) {
     .hipster {
-        background: url("../images/hipster2x.png") no-repeat center top;
+        background: url("../images/GetReviews.png") no-repeat center top;
         background-size: contain;
     }
 }
