#12 updated style of item detail view

--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -2538,3 +2538,12 @@ textarea:focus {
   margin-bottom: 0px;
   vertical-align: middle;
 }
+
+#owl-demo .item .item-img{
+    display: block;
+    width: auto; !important;
+    margin-left: auto;
+    margin-right: auto;
+    height: auto;
+    max-height: 300px !important;
+}
