--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -74,6 +74,12 @@
                                 <span data-translate="global.menu.entities.sale">Sale</span>
                             </a>
                         </li>
+                        <li ui-sref-active="active">
+                            <a ui-sref="bookmark" ng-click="vm.collapseNavbar()">
+                                <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                <span data-translate="global.menu.entities.bookmark">Bookmark</span>
+                            </a>
+                        </li>
                         <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
                     </ul>
                 </li>
